# sage-irm

./: .env.example  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
backend/: Dockerfile  README.md  admin_routes.py  advisor_routes.py  advisor_storage.py  agent_eval.md  fabric_service.py  main.py  models.py  pyproject.toml  red_team.py  storage.py  test_cashflows.py  workiq_service.py
backend/data/: admins.json  advisor_notes.json  advisors.json  appointments.json  escalations.json  investment_products.json  mcp_query_benchmark_results.json  mcp_query_candidates.json  regulatory_rules.json  user_profiles.json  workiq_mock.json
backend/sample/: agent-eval.ipynb
backend/scripts/: mcp_query_benchmark.py
backend/tests/: test_admin_mcp_status.py  test_advisor_chat_mcp_fallback.py  test_regression.py  test_scenario_share_storage.py
docs/: ADVISOR_VIEW_SPEC.md  FABRIC_DATA_AGENT_SPEC.md  FABRIC_INTEGRATION.md
lib/: adminApi.ts  advisorApi.ts  analysis.ts  api.ts  institutionalMock.ts  mockData.ts  mockPortfolio.ts  types.ts
scripts/: check_agent_def.py  check_sql_endpoint.py  configure_data_agent.py  create_data_agent.py  debug_data_agent.py  fabric_setup.py  generate_fabric_seed_data.py  load_lakehouse_tables.py  select_agent_tables.py  test_agent_endpoints.py  test_agent_scopes.py  test_agent_user_auth.py  test_agent_versions.py  test_fabric_integration.py  test_official_pattern.py  test_spn_official_pattern.py  (+3 more)
(+40 files in other folders)
